--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-02-04 Thu 18:30 -->
+<!-- 2021-02-05 Fri 14:57 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Literate K3s Cluster</title>
@@ -581,16 +581,16 @@ security design, which you should not attempt to circumvent.)
 
 <p>
 This automatic loading happens because of the <code>Local Variables</code> section found
-at the very bottom of this file under the <a href="#Footnotes">Footnotes</a> (not visible in HTML
-export). The <code>Local Variables</code> is a formal way to inform Emacs that you would
-like to run some code when the file is opened. It could be dangerous to do this
-in some situations, so it's a good thing that Emacs asked you this question! In
-this case, it is setting up to run the code block found in this file named
-<code>k3s-org-emacs-load</code>, in order to enable automatic HTML export whenever you
-save this file, as well as a few other fixes for things. If you don't desire
-this behaviour, remove the <code>eval</code> line from the <code>Local Variables</code> section at
-the bottom of the <a href="#Footnotes">Footnotes</a> section, and you will no longer see this message on
-load.
+at the very bottom of this file under the <code>Footnotes</code> section (not visible in
+HTML export). The <code>Local Variables</code> is a formal way to inform Emacs that you
+would like to run some code when the file is opened. It could be dangerous to
+do this in some situations, so it's a good thing that Emacs asked you this
+question! In this case, it is setting up to run the code block found in this
+file named <code>k3s-org-emacs-load</code>, in order to enable automatic HTML export
+whenever you save this file, as well as a few other fixes for things. If you
+don't desire this behaviour, remove the <code>eval</code> line from the <code>Local Variables</code>
+section at the bottom of the <code>Footnotes</code> section, and you will no longer see
+this message on load.
 </p>
 
 <p>
@@ -729,7 +729,7 @@ form.
 In org-mode, you can export the current document as a single HTML page, with the
 builtin org-mode exporter: type <code>C-c C-e h-h</code> or run <code>M-x
 org-html-export-to-html</code>. However, in this file, it is setup automatically to
-export HTML whenever the file is saved, see the <a href="#Footnotes">Footnotes</a> section. You can
+export HTML whenever the file is saved, see the <code>Footnotes</code> section. You can
 toggle this behaviour on and off, by executing <code>M-x
 toggle-org-html-export-on-save</code>.
 </p>
@@ -935,7 +935,7 @@ Open <code>${HOME}/git/literate-k3s/k3s.org</code> inside of Emacs.
 
 <p>
 (You should always open <code>k3s.org</code> first, because it loads some Emacs
-configuration when it loads that other files rely upon. See the <a href="#Footnotes">Footnotes</a>
+configuration when it loads that other files rely upon. See the <code>Footnotes</code>
 section.)
 </p>
 
@@ -1006,7 +1006,7 @@ cluster, read on.
 <code>CLUSTER</code> is the domain name of your cluster:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orge472422">k3s.example.com
+<pre class="src src-config" id="orgfab5fdd">k3s.example.com
 </pre>
 </div>
 </div>
@@ -1018,7 +1018,7 @@ cluster, read on.
 <code>CLUSTER_SSH_USER</code> is the admin SSH account of the cluster.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org091abcf">root
+<pre class="src src-config" id="orgfef2688">root
 </pre>
 </div>
 </div>
@@ -1030,7 +1030,7 @@ cluster, read on.
 <code>KUBE_CONFIG</code> is the local path to the kubectl config file
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org06a9fff">${HOME}/.kube/k3s.example.com-config
+<pre class="src src-config" id="orgb33ec39">${HOME}/.kube/k3s.example.com-config
 </pre>
 </div>
 </div>
@@ -1044,7 +1044,7 @@ Since you'll need to specify the kubectl config file each and every time you use
 code blocks.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orga2644cf">kubectl --kubeconfig=${HOME}/.kube/k3s.example.com-config
+<pre class="src src-config" id="org8ddbcd0">kubectl --kubeconfig=${HOME}/.kube/k3s.example.com-config
 </pre>
 </div>
 </div>
@@ -1072,7 +1072,7 @@ requirement for any external load balancer.
 
 <p>
 This config automatically redirects HTTP port 80 to HTTPs port 443, and TCP port
-2222 forwards SSH traffic for <a href="../deployments/gitea.html">Gitea</a>. 
+2222 forwards SSH traffic for <a href="../../lib/gitea.html">Gitea</a>. 
 </p>
 
 <p>
@@ -1090,7 +1090,7 @@ basic example of setting up a Traefik IngressRoute.
 provider. 
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org16b07dc">you@example.com
+<pre class="src src-config" id="org63a0b1e">you@example.com
 </pre>
 </div>
 </div>
@@ -1103,7 +1103,7 @@ provider.
 provider). 
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgd03bf41">https://acme-staging-v02.api.letsencrypt.org/directory
+<pre class="src src-config" id="org537ac62">https://acme-staging-v02.api.letsencrypt.org/directory
 </pre>
 </div>
 
@@ -1146,7 +1146,7 @@ domain name to respond to. <code>TRAEFIK_WHOAMI_DOMAIN</code> is the subdomain t
 whoami service responds to.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org030aa13">whoami.k3s.example.com
+<pre class="src src-config" id="org9da7c99">whoami.k3s.example.com
 </pre>
 </div>
 </div>
@@ -1158,7 +1158,7 @@ whoami service responds to.
 The version number of Traefik to install (eg. <code>2.3</code>).
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org977271a">v2.3
+<pre class="src src-config" id="orgc28915a">v2.3
 </pre>
 </div>
 </div>
@@ -1170,7 +1170,7 @@ The version number of Traefik to install (eg. <code>2.3</code>).
 <code>TRAEFIK_LOG_LEVEL</code> is the filter level on the traefik log.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org45a8cd2">INFO
+<pre class="src src-config" id="orgfd6cf7c">INFO
 </pre>
 </div>
 </div>
@@ -1218,7 +1218,7 @@ Test with TLS verification on:
 </div>
 
 <p>
-TLS will not verify until you use the production <a href="#orgd03bf41">TRAEFIK_ACME_SERVER</a>.
+TLS will not verify until you use the production <a href="#org537ac62">TRAEFIK_ACME_SERVER</a>.
 </p>
 </div>
 </div>
@@ -1556,7 +1556,7 @@ to direct traffic to any other node.
 <div class="outline-text-4" id="text-3-1-13">
 <p>
 <a href="https://github.com/traefik/whoami">traefik/whoami</a> can be deployed to test Traefik functionality. It listens to the
-domain <a href="#org030aa13">TRAEFIK_WHOAMI_DOMAIN</a> (eg. <code>whoami.k3s.example.com</code>).
+domain <a href="#org9da7c99">TRAEFIK_WHOAMI_DOMAIN</a> (eg. <code>whoami.k3s.example.com</code>).
 </p>
 
 <div class="org-src-container">
@@ -1650,8 +1650,8 @@ secrets.
 <h4 id="Install%20bitnami-labs%2Fsealed-secrets%20to%20the%20cluster"><span class="section-number-4">3.2.1</span> Install bitnami-labs/sealed-secrets to the cluster</h4>
 <div class="outline-text-4" id="text-3-2-1">
 <p>
-In <a href="#Workstation%20tools">Workstation tools</a> you already installed the command line client. Now you need
-to install it to the cluster:
+You should have already installed the command line client (See <code>Workstation
+Tools</code>). Now it's time to install the cluster side portion:
 </p>
 
 <div class="org-src-container">
@@ -1689,7 +1689,7 @@ easily mirror these repositories to external hosts like GitHub.
 <h4 id="GITEA_DOMAIN"><span class="section-number-4">4.1.1</span> GITEA_DOMAIN</h4>
 <div class="outline-text-4" id="text-4-1-1">
 <div class="org-src-container">
-<pre class="src src-config" id="org963e3d2">git.k3s.example.com
+<pre class="src src-config" id="orgbbd23fa">git.k3s.example.com
 </pre>
 </div>
 </div>
@@ -1701,7 +1701,7 @@ easily mirror these repositories to external hosts like GitHub.
 The size of the postgres database volume for gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org175463c">5Gi
+<pre class="src src-config" id="orga7815fe">5Gi
 </pre>
 </div>
 </div>
@@ -1713,7 +1713,7 @@ The size of the postgres database volume for gitea:
 The size of the data volume for gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org33b475a">5Gi
+<pre class="src src-config" id="org92eed52">5Gi
 </pre>
 </div>
 </div>
@@ -1726,7 +1726,7 @@ The size of the data volume for gitea:
 name.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org96b808b">root
+<pre class="src src-config" id="orgdd90868">root
 </pre>
 </div>
 </div>
@@ -1738,7 +1738,7 @@ name.
 <code>GITEA_EMAIL</code> is the admin account email address:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgac9aabc">root@example.com
+<pre class="src src-config" id="orga8a15e8">root@example.com
 </pre>
 </div>
 </div>
@@ -2288,7 +2288,7 @@ The name of the repository containing these org files, and from which flux
 reads. Not including the domain, just the name.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org0bea9a9">literate-k3s
+<pre class="src src-config" id="orgc5c30f3">literate-k3s
 </pre>
 </div>
 </div>
@@ -2300,7 +2300,7 @@ reads. Not including the domain, just the name.
 This is the correct git remote URL if you are using self-hosted Gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org28dde79">ssh://git@git.k3s.example.com:2222/root/literate-k3s.git
+<pre class="src src-config" id="org04d332f">ssh://git@git.k3s.example.com:2222/root/literate-k3s.git
 </pre>
 </div>
 </div>
@@ -2345,7 +2345,7 @@ and keep the cluster in sync with its state.
 
 <p>
 On Gitea, click the <code>+</code> icon in the upper right corner to create a new <code>New
-Repository</code>. Call the new repository the same as <a href="#org0bea9a9">FLUX_REPO_NAME</a>. 
+Repository</code>. Call the new repository the same as <a href="#orgc5c30f3">FLUX_REPO_NAME</a>. 
 </p>
 
 <p>
@@ -2621,7 +2621,7 @@ well, so I instead opted to copy them here.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: EnigmaCurry</p>
-<p class="date">Created: 2021-02-04 Thu 18:30</p>
+<p class="date">Created: 2021-02-05 Fri 14:57</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
