--- a/clusters/k3s.example.com/index.html
+++ b/clusters/k3s.example.com/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-02-05 Fri 18:41 -->
+<!-- 2021-02-05 Fri 19:11 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Literate K3s Cluster</title>
@@ -478,10 +478,9 @@ and they are the means with which to create and edit YAML manifests for your
 cluster. Essentially, this set of org files becomes your ultimate source of
 configuration for your entire cluster: to make a change to your cluster, you
 first need to make the change in the documentation. You should open these files
-(<code>k3s.org</code> and <code>config.org</code>) in Emacs, edit them in org-mode, run the setup
-commands described inside, and <code>tangle</code> the source files. A minimal tutorial on
-using Emacs with org-babel is included, but this expects some pre-existing Emacs
-knowledge.
+in Emacs, edit them in org-mode, run the setup commands described inside, and
+<code>tangle</code> the source files. A minimal tutorial on using Emacs with org-babel is
+included, but this expects some pre-existing Emacs knowledge.
 </p>
 
 <p>
@@ -493,7 +492,7 @@ automatic process, which takes the literal snippets of code found inside these
 documentation files, and exports them out to normal individual files, somewhere
 else on your system. When you tangle, all of the code blocks in this file will
 overwrite all of the external files that they are associated with (those marked
-with the <code>:tangle FILE</code> code block header, writes itself to <code>FILE</code>). So,
+with the <code>:tangle FILE</code> code block header, will write itself to <code>FILE</code>). So,
 although the ultimate code and config is sourced from this documentation, you
 will also be able to see the code in its exported form, in the various external
 places, as separate files. You should treat these generated files as
@@ -771,11 +770,11 @@ then type <code>C-c C-c</code>.
 <p>
 If you would like to live reload the browser page, on save, you can use the
 Python based <a href="https://pypi.org/project/livereload/">livereload server</a>. First install it eg: <code>pip install livereload</code>,
-then run <code>livereload -w3 -o0</code> in the same directory as the exported file, it
-should open your web browser automatically to <code>http://127.0.0.1:35729/</code>. You
-should now automatically see the changes reload on save. The argument <code>-w3</code>
-waits three seconds before reloading the browser on save, which makes reloading
-a bit more reliable.
+then run <code>livereload -w3 -o0 -t index.html</code> in the same directory as the
+exported file, it should open your web browser automatically to
+<code>http://127.0.0.1:35729/</code>. You should now automatically see the changes reload
+on save. The argument <code>-w3</code> waits three seconds before reloading the browser on
+save, which makes reloading a bit more reliable.
 </p>
 </div>
 </div>
@@ -1034,7 +1033,7 @@ cluster, read on.
 <code>CLUSTER</code> is the domain name of your cluster:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org9422557">k3s.example.com
+<pre class="src src-config" id="org1cecffd">k3s.example.com
 </pre>
 </div>
 </div>
@@ -1046,7 +1045,7 @@ cluster, read on.
 <code>CLUSTER_SSH_USER</code> is the admin SSH account of the cluster.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgba44733">root
+<pre class="src src-config" id="org523e761">root
 </pre>
 </div>
 </div>
@@ -1064,7 +1063,7 @@ org-mode is not configured for tangling to any other directory.
 </p>
 
 <div class="org-src-container">
-<pre class="src src-config" id="org3ad5282">${HOME}/git/literate-k3s/clusters/k3s.example.com
+<pre class="src src-config" id="orgdc9a13c">${HOME}/git/literate-k3s/clusters/k3s.example.com
 </pre>
 </div>
 </div>
@@ -1077,7 +1076,7 @@ org-mode is not configured for tangling to any other directory.
 <code>KUBE_CONFIG</code> is the local path to the kubectl config file
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgf7c93a7">${HOME}/.kube/k3s.example.com-config
+<pre class="src src-config" id="org27655bb">${HOME}/.kube/k3s.example.com-config
 </pre>
 </div>
 </div>
@@ -1091,7 +1090,7 @@ Since you'll need to specify the kubectl config file each and every time you use
 code blocks.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgb4ea6f2">kubectl --kubeconfig=${HOME}/.kube/k3s.example.com-config
+<pre class="src src-config" id="org31b2b63">kubectl --kubeconfig=${HOME}/.kube/k3s.example.com-config
 </pre>
 </div>
 </div>
@@ -1137,7 +1136,7 @@ related.
 provider. 
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgbf342b2">you@example.com
+<pre class="src src-config" id="org49b8c2e">you@example.com
 </pre>
 </div>
 </div>
@@ -1150,7 +1149,7 @@ provider.
 provider). 
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgd54bdb3">https://acme-staging-v02.api.letsencrypt.org/directory
+<pre class="src src-config" id="org8840f34">https://acme-staging-v02.api.letsencrypt.org/directory
 </pre>
 </div>
 
@@ -1193,7 +1192,7 @@ domain name to respond to. <code>TRAEFIK_WHOAMI_DOMAIN</code> is the subdomain t
 whoami service responds to.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgabfbfee">whoami.k3s.example.com
+<pre class="src src-config" id="org56889d3">whoami.k3s.example.com
 </pre>
 </div>
 </div>
@@ -1205,7 +1204,7 @@ whoami service responds to.
 The version number of Traefik to install (eg. <code>2.3</code>).
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgd6e097a">v2.3
+<pre class="src src-config" id="orgc59be58">v2.3
 </pre>
 </div>
 </div>
@@ -1217,7 +1216,7 @@ The version number of Traefik to install (eg. <code>2.3</code>).
 <code>TRAEFIK_LOG_LEVEL</code> is the filter level on the traefik log.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgbb610e4">INFO
+<pre class="src src-config" id="orgabb6274">INFO
 </pre>
 </div>
 </div>
@@ -1298,7 +1297,7 @@ Test with TLS verification on:
 </div>
 
 <p>
-TLS will not verify until you use the production <a href="#orgd54bdb3">TRAEFIK_ACME_SERVER</a>.
+TLS will not verify until you use the production <a href="#org8840f34">TRAEFIK_ACME_SERVER</a>.
 </p>
 </div>
 </div>
@@ -1636,7 +1635,7 @@ to direct traffic to any other node.
 <div class="outline-text-4" id="text-4-2-8">
 <p>
 <a href="https://github.com/traefik/whoami">traefik/whoami</a> can be deployed to test Traefik functionality. It listens to the
-domain <a href="#orgabfbfee">TRAEFIK_WHOAMI_DOMAIN</a> (eg. <code>whoami.k3s.example.com</code>).
+domain <a href="#org56889d3">TRAEFIK_WHOAMI_DOMAIN</a> (eg. <code>whoami.k3s.example.com</code>).
 </p>
 
 <div class="org-src-container">
@@ -1757,7 +1756,7 @@ Tools</code>). Now it's time to install the cluster side portion:
 <h4 id="GITEA_DOMAIN"><span class="section-number-4">5.1.1</span> GITEA_DOMAIN</h4>
 <div class="outline-text-4" id="text-5-1-1">
 <div class="org-src-container">
-<pre class="src src-config" id="org186298a">git.k3s.example.com
+<pre class="src src-config" id="orgf1c06d5">git.k3s.example.com
 </pre>
 </div>
 </div>
@@ -1769,7 +1768,7 @@ Tools</code>). Now it's time to install the cluster side portion:
 The size of the postgres database volume for gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgdd51a5b">5Gi
+<pre class="src src-config" id="orge12a402">5Gi
 </pre>
 </div>
 </div>
@@ -1781,7 +1780,7 @@ The size of the postgres database volume for gitea:
 The size of the data volume for gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org989be50">5Gi
+<pre class="src src-config" id="orgd9a45da">5Gi
 </pre>
 </div>
 </div>
@@ -1794,7 +1793,7 @@ The size of the data volume for gitea:
 name.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgc3fb3f2">root
+<pre class="src src-config" id="orge29c1cb">root
 </pre>
 </div>
 </div>
@@ -1806,7 +1805,7 @@ name.
 <code>GITEA_EMAIL</code> is the admin account email address:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgdbf6a6f">root@example.com
+<pre class="src src-config" id="org9bbdcbe">root@example.com
 </pre>
 </div>
 </div>
@@ -2386,7 +2385,7 @@ The name of the repository containing these org files, and from which flux
 reads. Not including the domain, just the name.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgdcddc3c">literate-k3s
+<pre class="src src-config" id="orge281a35">literate-k3s
 </pre>
 </div>
 </div>
@@ -2398,7 +2397,7 @@ reads. Not including the domain, just the name.
 This is the correct git remote URL if you are using self-hosted Gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orga19ee96">ssh://git@git.k3s.example.com:2222/root/literate-k3s.git
+<pre class="src src-config" id="org26d2a27">ssh://git@git.k3s.example.com:2222/root/literate-k3s.git
 </pre>
 </div>
 </div>
@@ -2456,7 +2455,7 @@ and keep the cluster in sync with its state.
 
 <p>
 On Gitea, click the <code>+</code> icon in the upper right corner to create a new <code>New
-Repository</code>. Call the new repository the same as <a href="#orgdcddc3c">FLUX_REPO_NAME</a>. 
+Repository</code>. Call the new repository the same as <a href="#orge281a35">FLUX_REPO_NAME</a>. 
 </p>
 
 <p>
@@ -2732,7 +2731,7 @@ well, so I instead opted to copy them here.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: EnigmaCurry</p>
-<p class="date">Created: 2021-02-05 Fri 18:41</p>
+<p class="date">Created: 2021-02-05 Fri 19:11</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
