--- a/clusters/k3s.example.com/index.html
+++ b/clusters/k3s.example.com/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-02-05 Fri 19:11 -->
+<!-- 2021-02-06 Sat 14:20 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Literate K3s Cluster</title>
@@ -327,7 +327,7 @@ for the JavaScript code in this tag.
 <li><a href="#Using%20Emacs%2C%20org-mode%2C%20and%20babel">1.2. Using Emacs, org-mode, and babel</a>
 <ul>
 <li><a href="#Install%20Emacs%20and%20Configure">1.2.1. Install Emacs and Configure</a></li>
-<li><a href="#Open%20k3s.org%20in%20Emacs">1.2.2. Open k3s.org in Emacs</a></li>
+<li><a href="#Open%20k3s.example.com.org%20in%20Emacs">1.2.2. Open k3s.example.com.org in Emacs</a></li>
 <li><a href="#Evaluating%20Code%20Blocks">1.2.3. Evaluating Code Blocks</a></li>
 <li><a href="#Tangling%20Code%20Blocks">1.2.4. Tangling Code Blocks</a></li>
 <li><a href="#Editing%20code%20blocks">1.2.5. Editing code blocks</a></li>
@@ -503,20 +503,20 @@ will become much easier to track the changes in each file over time.
 </p>
 
 <p>
-It is these derivative files (a collection of YAML manifests), that you generate
-via <code>tangle</code>, and put in a git repository, which become the source of truth for
-your cluster state, through Flux. <a href="https://github.com/fluxcd/flux2">Flux version 2</a> is a Continuous Delivery
-system, that synchronizes the state of your cluster (and all deployments) from
-the state of YAML manifest files in this git repository. With Flux, you never
-run cluster commands like <code>kubectl apply</code> or <code>helm install</code> manually, instead
-you commit these manifest files to the git repository, <code>git push</code>, and Flux
-applies the changes to the cluster, on your behalf. There will be a little bit
-of setup that you have to do manually with kubectl, in order to bootstrap Flux,
-but once Flux is running on your cluster, from that point on, you can control
-your entire cluster state simply by <code>tangling</code> this file, commiting the
-generated files to git, and pushing to the remote repository. Flux is
-continuously monitoring this repository for changes (checks every 1 minute) and
-automatically applies them.
+It is these derivative files (a collection of YAML manifests grouped in
+directories for each namespace), that you generate via <code>tangle</code>, and put in a
+git repository, which become the actual source of truth for your cluster state,
+through Flux. <a href="https://github.com/fluxcd/flux2">Flux version 2</a> is a Continuous Delivery system, that synchronizes
+the state of your cluster (and all deployments) from the state of YAML manifest
+files in this git repository. With Flux, you never run cluster commands like
+<code>kubectl apply</code> or <code>helm install</code> manually, instead you commit these manifest
+files to the git repository, <code>git push</code>, and Flux applies the changes to the
+cluster, on your behalf. There will be a little bit of setup that you have to do
+manually with kubectl, in order to bootstrap Flux, but once Flux is running on
+your cluster, from that point on, you can control your entire cluster state
+simply by <code>tangling</code>, then committing the generated files to git, and pushing to
+the remote repository. Flux is continuously monitoring this repository for
+changes (checks every 1 minute) and automatically applies them.
 </p>
 
 <p>
@@ -558,12 +558,12 @@ in the tutorial, and will not be mentioned again here.
 </div>
 </div>
 
-<div id="outline-container-Open%20k3s.org%20in%20Emacs" class="outline-4">
-<h4 id="Open%20k3s.org%20in%20Emacs"><span class="section-number-4">1.2.2</span> Open k3s.org in Emacs</h4>
+<div id="outline-container-Open%20k3s.example.com.org%20in%20Emacs" class="outline-4">
+<h4 id="Open%20k3s.example.com.org%20in%20Emacs"><span class="section-number-4">1.2.2</span> Open k3s.example.com.org in Emacs</h4>
 <div class="outline-text-4" id="text-1-2-2">
 <p>
-The first time you open this file, a dialog will open warning you about the
-execution of code, and asking for your permission to run an <code>eval</code> code line:
+When you use Emacs to open one of the main Org files, a dialog will open asking
+you for permission to execute some code:
 </p>
 
 <pre class="example">
@@ -1033,7 +1033,7 @@ cluster, read on.
 <code>CLUSTER</code> is the domain name of your cluster:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org1cecffd">k3s.example.com
+<pre class="src src-config" id="org93cf170">k3s.example.com
 </pre>
 </div>
 </div>
@@ -1045,7 +1045,7 @@ cluster, read on.
 <code>CLUSTER_SSH_USER</code> is the admin SSH account of the cluster.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org523e761">root
+<pre class="src src-config" id="org9942edd">root
 </pre>
 </div>
 </div>
@@ -1063,7 +1063,7 @@ org-mode is not configured for tangling to any other directory.
 </p>
 
 <div class="org-src-container">
-<pre class="src src-config" id="orgdc9a13c">${HOME}/git/literate-k3s/clusters/k3s.example.com
+<pre class="src src-config" id="org4c829bd">${HOME}/git/literate-k3s/clusters/k3s.example.com
 </pre>
 </div>
 </div>
@@ -1076,7 +1076,7 @@ org-mode is not configured for tangling to any other directory.
 <code>KUBE_CONFIG</code> is the local path to the kubectl config file
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org27655bb">${HOME}/.kube/k3s.example.com-config
+<pre class="src src-config" id="org643d263">${HOME}/.kube/k3s.example.com-config
 </pre>
 </div>
 </div>
@@ -1090,7 +1090,7 @@ Since you'll need to specify the kubectl config file each and every time you use
 code blocks.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org31b2b63">kubectl --kubeconfig=${HOME}/.kube/k3s.example.com-config
+<pre class="src src-config" id="org1df6c7c">kubectl --kubeconfig=${HOME}/.kube/k3s.example.com-config
 </pre>
 </div>
 </div>
@@ -1136,7 +1136,7 @@ related.
 provider. 
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org49b8c2e">you@example.com
+<pre class="src src-config" id="org5590637">you@example.com
 </pre>
 </div>
 </div>
@@ -1149,7 +1149,7 @@ provider.
 provider). 
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org8840f34">https://acme-staging-v02.api.letsencrypt.org/directory
+<pre class="src src-config" id="orgdcfa9a6">https://acme-staging-v02.api.letsencrypt.org/directory
 </pre>
 </div>
 
@@ -1192,7 +1192,7 @@ domain name to respond to. <code>TRAEFIK_WHOAMI_DOMAIN</code> is the subdomain t
 whoami service responds to.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org56889d3">whoami.k3s.example.com
+<pre class="src src-config" id="orgdc9518c">whoami.k3s.example.com
 </pre>
 </div>
 </div>
@@ -1204,7 +1204,7 @@ whoami service responds to.
 The version number of Traefik to install (eg. <code>2.3</code>).
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgc59be58">v2.3
+<pre class="src src-config" id="org559b074">v2.3
 </pre>
 </div>
 </div>
@@ -1216,7 +1216,7 @@ The version number of Traefik to install (eg. <code>2.3</code>).
 <code>TRAEFIK_LOG_LEVEL</code> is the filter level on the traefik log.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgabb6274">INFO
+<pre class="src src-config" id="orgdb9849b">INFO
 </pre>
 </div>
 </div>
@@ -1297,7 +1297,7 @@ Test with TLS verification on:
 </div>
 
 <p>
-TLS will not verify until you use the production <a href="#org8840f34">TRAEFIK_ACME_SERVER</a>.
+TLS will not verify until you use the production <a href="#orgdcfa9a6">TRAEFIK_ACME_SERVER</a>.
 </p>
 </div>
 </div>
@@ -1635,7 +1635,7 @@ to direct traffic to any other node.
 <div class="outline-text-4" id="text-4-2-8">
 <p>
 <a href="https://github.com/traefik/whoami">traefik/whoami</a> can be deployed to test Traefik functionality. It listens to the
-domain <a href="#org56889d3">TRAEFIK_WHOAMI_DOMAIN</a> (eg. <code>whoami.k3s.example.com</code>).
+domain <a href="#orgdc9518c">TRAEFIK_WHOAMI_DOMAIN</a> (eg. <code>whoami.k3s.example.com</code>).
 </p>
 
 <div class="org-src-container">
@@ -1756,7 +1756,7 @@ Tools</code>). Now it's time to install the cluster side portion:
 <h4 id="GITEA_DOMAIN"><span class="section-number-4">5.1.1</span> GITEA_DOMAIN</h4>
 <div class="outline-text-4" id="text-5-1-1">
 <div class="org-src-container">
-<pre class="src src-config" id="orgf1c06d5">git.k3s.example.com
+<pre class="src src-config" id="org1beda61">git.k3s.example.com
 </pre>
 </div>
 </div>
@@ -1768,7 +1768,7 @@ Tools</code>). Now it's time to install the cluster side portion:
 The size of the postgres database volume for gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orge12a402">5Gi
+<pre class="src src-config" id="org6a56fa4">5Gi
 </pre>
 </div>
 </div>
@@ -1780,7 +1780,7 @@ The size of the postgres database volume for gitea:
 The size of the data volume for gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orgd9a45da">5Gi
+<pre class="src src-config" id="orgcb20918">5Gi
 </pre>
 </div>
 </div>
@@ -1793,7 +1793,7 @@ The size of the data volume for gitea:
 name.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orge29c1cb">root
+<pre class="src src-config" id="orgdc71d84">root
 </pre>
 </div>
 </div>
@@ -1805,7 +1805,7 @@ name.
 <code>GITEA_EMAIL</code> is the admin account email address:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org9bbdcbe">root@example.com
+<pre class="src src-config" id="org903527a">root@example.com
 </pre>
 </div>
 </div>
@@ -2385,7 +2385,7 @@ The name of the repository containing these org files, and from which flux
 reads. Not including the domain, just the name.
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="orge281a35">literate-k3s
+<pre class="src src-config" id="orgaa4cb21">literate-k3s
 </pre>
 </div>
 </div>
@@ -2397,7 +2397,7 @@ reads. Not including the domain, just the name.
 This is the correct git remote URL if you are using self-hosted Gitea:
 </p>
 <div class="org-src-container">
-<pre class="src src-config" id="org26d2a27">ssh://git@git.k3s.example.com:2222/root/literate-k3s.git
+<pre class="src src-config" id="orga00afdd">ssh://git@git.k3s.example.com:2222/root/literate-k3s.git
 </pre>
 </div>
 </div>
@@ -2455,7 +2455,7 @@ and keep the cluster in sync with its state.
 
 <p>
 On Gitea, click the <code>+</code> icon in the upper right corner to create a new <code>New
-Repository</code>. Call the new repository the same as <a href="#orge281a35">FLUX_REPO_NAME</a>. 
+Repository</code>. Call the new repository the same as <a href="#orgaa4cb21">FLUX_REPO_NAME</a>. 
 </p>
 
 <p>
@@ -2731,7 +2731,7 @@ well, so I instead opted to copy them here.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: EnigmaCurry</p>
-<p class="date">Created: 2021-02-05 Fri 19:11</p>
+<p class="date">Created: 2021-02-06 Sat 14:20</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
